--- a/stories/aeb/0277_ṡuħàb_slides.html
+++ b/stories/aeb/0277_ṡuħàb_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>Ṡuħàb - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="ṡuħàb" class="slide level1">
+<h1>Ṡuħàb</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/02.jpg" /></p>
+<p>Ène ismi Simo.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/03.jpg" /></p>
+<p>Ène ġandi arbġa ṡuħàb.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/04.jpg" /></p>
+<p>Esèmìhum Zizo, Lele, Sisa w Ayanda.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/05.jpg" /></p>
+<p>Ṡàħibti Zizo tħibb laġb il-kùra.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/06.jpg" /></p>
+<p>Ṡàħibti Lele tħibb il-ġùmèn.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/07.jpg" /></p>
+<p>Ṡàħbi Sisa yħibb laġb il-ɍummìża.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/08.jpg" /></p>
+<p>Ṡàħibti Ayanda tħibb il-qràye.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/09.jpg" /></p>
+<p>W'ène?Ène nħibb naġmil il-ħàjèt il-kull illi hùme yħibbu yaġmlùhum.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,90 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/10.jpg" /></p>
+<p>Nalġab il-kùra mġa Zizo.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/11.jpg" /></p>
+<p>Nġùm mġa Lele.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/12.jpg" /></p>
+<p>Nalġab il-ɍummìża mġa Sisa.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/13.jpg" /></p>
+<p>W'inti, ṡàħbi, cnuwwe tħibb taġmil?</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/14.jpg" /></p>
+<p>Ìje alġab il-kura mġàne.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/15.jpg" /></p>
+<p>Ìje ġùm mġàne.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/16.jpg" /></p>
+<p>Ìje alġab il-ɍummìże mġàne.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0277/17.jpg" /></p>
+<p>Ìje aqra mġàne!</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ṡuħàb-1">Ṡuħàb</h2>
+<strong>Text:</strong> Zimbili Dlamini, Hlengiwe Zondi<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Ramzi Hachani<br> <strong>Language:</strong> Tunisian Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/friends'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
