--- a/stories/aeb/0312_xcem-il-fìle_slides.html
+++ b/stories/aeb/0312_xcem-il-fìle_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>Xcem il-Fìle - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="xcem-il-fìle" class="slide level1">
+<h1>Xcem il-Fìle</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/02.jpg" /></p>
+<p>In-nès il-kull yaġrfu illi il-fyùle ġandhum xcumèt ŧwèl.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/03.jpg" /></p>
+<p>Emme bikri, xcem il-fìl kèn qṡìr w xcìn.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/04.jpg" /></p>
+<p>Fìle ṡɍìra twildit.</p>
+<p>Kènit ġandhe ħubb l-itŧilèġ.</p>
+<p>Kènit ġandhe su`èl l'kull ħayewèn.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +125,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/05.jpg" /></p>
+<p>Kènit mitġajjbe fi'z-zaràfe. &quot;Ġlèc ġandik raqbe ŧwìle?&quot; nicdithe.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +134,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/06.jpg" /></p>
+<p>Kènit mittġajjbe fi Weħìd il-Qarn. &quot;Ġlèc garnik mđebbib?&quot; nicdittu.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +143,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/07.jpg" /></p>
+<p>Kènit mittġajjbe barce fi'it-Timsèħ. &quot;Cnuwwe yèklu it-tmèseħ fi'l-ġce?&quot; nicdit.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +152,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/08.jpg" /></p>
+<p>Il-Ɍràb iđ-Đkiy fìsaġ qàl,&quot;Tebbaġni l'il-wèd. Ɍàdi tewwe tcùf cnuwwe yèklu it-tmèseħ fi'l-ġce.&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +161,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/09.jpg" /></p>
+<p>W hekke il-Fìle iṡ-Ṡɍìra tebbġit il-Ɍràb l'il-wèd.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +170,98 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/10.jpg" /></p>
+<p>Dezzit il-qṡab w wiqfit ġle ħarf il-wèd. Ɍazrit fi'l-me.</p>
+<p>Wìn it-Timsaħ?</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/11.jpg" /></p>
+<p>&quot;Ġaslème,&quot; qàlit il-ħajre illi baħđe ħarf il-wèd. &quot;Ġaslème,&quot; qàlit il-Fìle iṡ-Ṡɍìra. &quot;Tnejjimci tqulli cnuwwe yèklu it-tmèseħ fi'l-ġce?&quot; nicdit.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/12.jpg" /></p>
+<p>&quot;Uqrub w tewwe nqullik,&quot; qàlit il-ħajre.</p>
+<p>Il-Fìle iṡ-Ṡɍìra ŧabbsit. &quot;Zìd uqrub,&quot; qalit il-ħajre.</p>
+<p>Il-Fìle iṡ-Ṡɍìra zèdit ŧabbsit.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/13.jpg" /></p>
+<p>Ġle ɍafle! Traq!</p>
+<p>It-Timsèħ xŧaf xcem il-Fìle iṡ-Ṡɍìre b'jdèqu.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/14.jpg" /></p>
+<p>Il-Fìle iṡ-Ṡɍìra ŧàħit il-tèli w jibdit.</p>
+<p>W jibdit, w jibdit.</p>
+<p>Emme it-Timsèħ me seyyibċ xcemhe.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/15.jpg" /></p>
+<p>Xcem il-Fìle iṡ-Ṡɍìra tjebbid w tjebbid.</p>
+<p>W tjebbid. Ħatte lìn ŧàħit. &quot;Dufff!!&quot;</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/16.jpg" /></p>
+<p>Xcem il-Fìle iṡ-Ṡɍìra tjebbid ħatte welle ŧwìl.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0312/17.jpg" /></p>
+<p>Xcemhe ŧwèl l'darjet illi wellèt tnejjim taqŧif il-ɍalle min aġle ġurf.</p>
+<p>W l'lyùm, il-fyùle il-kull ġandhum xràŧim ŧwèl w nèfġìn.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="xcem-il-fìle-1">Xcem il-Fìle</h2>
+<strong>Text:</strong> Judith Baker, Lorato Trok<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Ramzi Hachani<br> <strong>Language:</strong> Tunisian Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/curious-baby-elephant'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
