--- a/stories/tl/0004_si-kambing-si-aso-at-si-baka.html
+++ b/stories/tl/0004_si-kambing-si-aso-at-si-baka.html
@@ -63,7 +63,7 @@ Fabian Wakholi<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
 
-<p>May sukli si Aso dahil hindi eksakto ang binayad niya</p>
+<p>May sukli si Aso dahil hindi eksakto ang binayad niya.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
