--- a/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok.html
+++ b/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok.html
@@ -84,7 +84,7 @@ Tessa Welch<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
 
-<p>Sa di malayo, may nakita siyang ilaw sa isang bahay. Nilapitan niya ang kubo at kumatok sa pinto.</p>
+<p>Sa di kalayuan, may nakita siyang ilaw sa isang bahay. Nilapitan niya ang kubo at kumatok sa pinto.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
