--- a/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html
+++ b/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>Sa di malayo, may nakita siyang ilaw sa isang bahay. Nilapitan niya ang kubo at kumatok sa pinto.</p>
+<p>Sa di kalayuan, may nakita siyang ilaw sa isang bahay. Nilapitan niya ang kubo at kumatok sa pinto.</p>
 <center>
 <strong>6</strong>
 </center>
