--- a/stories/aeb/0121_ġṡìde_slides.html
+++ b/stories/aeb/0121_ġṡìde_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>Ġṡìde - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="ġṡìde" class="slide level1">
+<h1>Ġṡìde</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/02.jpg" /></p>
+<p>Zama yħażżir fi rùħu l'il-mektib.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/03.jpg" /></p>
+<p>Bàba yŧayyib fi ġṡìdet fŧùr iṡ-ṡbèħ.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/04.jpg" /></p>
+<p>&quot;Ummi tŧayyib aħsin ġṡìde!&quot; qàl Zama.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/05.jpg" /></p>
+<p>Il-ġṡìde taġŧi l'Zama quwwe l'il-mektib.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/06.jpg" /></p>
+<p>Il-ġṡìde ŧàbit.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/07.jpg" /></p>
+<p>Bàba yṡubb il-ħlìb b'kull maħabbe.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/08.jpg" /></p>
+<p>&quot;Bàba, yużhurli he'l-ġṡìde nèqṡa sukkur,&quot; qàl Zama.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/09.jpg" /></p>
+<p>&quot;Ġṡìdet Ummi aħsin b'barce min ġṡìdet Bàba,&quot; xammim Zama.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,54 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/10.jpg" /></p>
+<p>&quot;Bàba, tnejjemci tzìdli sukkur, min fażlik?&quot; s`il Zama</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/11.jpg" /></p>
+<p>Baba zèd sukkur l'Zama.</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/12.jpg" /></p>
+<p>&quot;Xìt! Bàba! Ṡabbìt milħ fi'l-ġṡìde mtèġi!&quot;</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0121/13.jpg" /></p>
+<p>&quot;Bàba, waqtèc trawwaħ Ummi?&quot; s`il Zama.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ġṡìde-1">Ġṡìde</h2>
+<strong>Text:</strong> Zimbili Dlamini, Hlengiwe Zondi<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Ramzi Hachani<br> <strong>Language:</strong> Tunisian Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/porridge'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
