--- a/stories/aeb/0360_ħisbèn-il-qŧàŧis_slides.html
+++ b/stories/aeb/0360_ħisbèn-il-qŧàŧis_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>Ħisbèn il-qŧàŧis - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,19 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="ħisbèn-il-qŧàŧis" class="slide level1">
+<h1>Ħisbèn il-qŧàŧis</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/02.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>0</p>
+<p>Ṡfìr qaŧŧùs.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +107,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/03.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>1</p>
+<p>Qaŧŧùs wèħid.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +118,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/04.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>2</p>
+<p>Zùz qŧàŧis.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +129,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/05.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>3</p>
+<p>Ċlèċe qŧàŧis.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +140,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/06.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>4</p>
+<p>Arbġa qŧàŧis.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +151,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/07.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>5</p>
+<p>Xamse qŧàŧis.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +162,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/08.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>6</p>
+<p>Sitte qŧàŧis.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +173,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/09.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>7</p>
+<p>Sebġa qŧàŧis.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +184,51 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/10.jpg" /></p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>8</p>
+<p>Ċmenye qŧàŧis.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/11.jpg" /></p>
+<p>Cnuwwe hèđe?</p>
+<p>Qŧìŧis wèħil fi cujra!&quot;Ène tewwe nmennġik!&quot;</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0360/12.jpg" /></p>
+<p>&quot;Ummi, nnejmùci nxallìuh ġandne? Wèħid èxir barka.&quot;</p>
+<p>Qaddèc min qaŧŧùs?</p>
+<p>9</p>
+<p>Tisġa qŧàŧis.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="ħisbèn-il-qŧàŧis-1">Ħisbèn il-qŧàŧis</h2>
+<strong>Text:</strong> Nina Orange<br> <strong>Illustrations:</strong> Jesse Breytenbach<br> <strong>Translation:</strong> Ramzi Hachani<br> <strong>Language:</strong> Tunisian Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/counting-cats'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
