--- a/stories/ar/0006_أنانسي-و-الحكمة_slides.html
+++ b/stories/ar/0006_أنانسي-و-الحكمة_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>أنانسي و الحكمة - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="أنانسي-و-الحكمة" class="slide level1">
+<h1>أنانسي و الحكمة</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>في قديم الزمان، كان الناس لا يعرفون شيئاً. كانوا لا يعرفون طريقة زراعة المحاصيل، أو نسج الأقمشة، أو صناعة الأدوات الحديدية. كان هناك الإله نيام في السماء وكان يملك كل الحكمة الموجودة في العالم. و كان محتفظاً بها في وعاء من الفخار.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>في يوم من الأيام، قرر نيام أن يعطي وعاء الحكمة إلى أنانسي. في كل مرة كان أنانسي ينظر في وعاء الفخار، كان يتعلم شيئاً جديداً. كان أمراً مثيراً!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>فكر الجشع أنانسي: &quot;أنا سوف أحتفظ بالوعاء في مكان آمن في أعلى شجرة طويلة. بعد ذلك يمكن أن يكون كل شيء لنفسي!&quot; ونسج خيط طويل، ولفه حول وعاء الطين، وربطه إلى بطنه. بدأ تسلق الشجرة. ولكن كان من الصعب تسلق الشجرة و الوعاء يخبط في ركبتيه طوال الوقت.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>خلال كل هذا الوقت كان ابن أنانسي الصغير يشاهد من أسفل الشجرة. وقال: &quot;ألن يكون من الأسهل تسلق الشجرة إذا كان الوعاء مربوطاً إلى ظهرك بدلا من بطنك؟&quot; حاول أنانسي ربط وعاء الفخار المليء بالحكمة إلى ظهره، و أصبح فعلاً تسلق الشجرة أسهل.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>خلال وقت قصير وصل إلى أعلى الشجرة. ولكن بعد ذلك توقف وفكر، &quot;أنا من المفترض أن أكون صاحب كل الحكمة، وهنا كان ابني أذكى مني!&quot; كان أنانسي غاضب جدا وألقى وعاء الفخار إلى أسفل الشجرة.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>تحطم الوعاء إلى قطع صغيرة على الأرض. وأصبحت الحكمة للجميع لكي يتشاركوها. و هكذا تعلم الناس الفلاحة، و نسج الأقمشة، و صناعة الأدوات الحديدية، وجميع الأشياء الأخرى التي يعرف الناس كيفية القيام بها.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,36 +150,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<h2 id="أنانسي-و-الحكمة-1">أنانسي و الحكمة</h2>
+<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
