--- a/stories/ar/0141_-الدجاجة-والدودة-_slides.html
+++ b/stories/ar/0141_-الدجاجة-والدودة-_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Iba't ibang panahon - Global African Storybook</title>
+  <title>الدجاجة والدودة - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="ibat-ibang-panahon" class="slide level1">
-<h1>Iba't ibang panahon</h1>
+<section id="الدجاجة-والدودة" class="slide level1">
+<h1>الدجاجة والدودة</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/02.jpg" /></p>
-<p>Tag-araw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
+<p>كانت الدجاجة والدودة أصدقاء، لكنهم كانوا يتنافسون دائما مع بعضها البعض. في يوم من الأيام، قرروا لعب كرة القدم لمعرفة من هو أفضل لاعب.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/03.jpg" /></p>
-<p>Mainit ang panahon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
+<p>ذهبوا إلى ملعب كرة القدم وبدأوا لعبتهم. كانت الدجاجة سريعة، ولكن كانت الدودة أسرع. كانت الدجاجة تركل بعيداً، ولكن الدودة كانت تركل أبعد من ذلك. فبدأت الدجاجة تشعر بالغضب.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/04.jpg" /></p>
-<p>Mahangin.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
+<p>بعد ذلك قرروا لعب ركلات الترجيح. في المرة الأولى كانت الدودة هي حارس المرمى. فسجلت الدجاجة هدف واحد فقط. ثم جاء دور الدجاجة لتكون هي حارس المرمى.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/05.jpg" /></p>
-<p>Maulap.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
+<p>ركلت الدودة الكرة فسجلت هدف. ناورت الدودة بالكرة و سجلت هدف. سددت الدودة الكرة برأسها في المرمى و سجلت هدف. سجلت الدودة خمسة أهداف.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/06.jpg" /></p>
-<p>Maginaw.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
+<p>كانت الدجاجة غاضبة لأنها خسرت، حيث أنها لم تكن تتمتع بالروح الرياضية. ضحكت الدودة لأن صديقتها الدجاجة أثارت ضجة لخسارتها.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/07.jpg" /></p>
-<p>Maulan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
+<p>كانت الدجاجت غاضبة لدرجة أنها فتحت منقارها واسعاً وابتلعت الدودة.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/08.jpg" /></p>
-<p>May kulog.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
+<p>بينما كانت الدجاجة تمشي في طريقها إلى المنزل، التقت بوالدة الدودة. سألت والدة الدودة الدجاجة: &quot;هل رأيت إبنتي؟&quot; لكن الدجاجة لم تقل أي شيء. كانت والدة الدودة قلقة .</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
-<p>Ngayon, nakikita ko na ang bahag-hari.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
+<p>ثم سمعت والدة الدودة صوتا صغيرا يبكي: &quot;ساعديني يا أمي!&quot;. نظرت والدة الدودة في جميع الأنحاء واستمعت بعناية، فوجدت الصوت يأتي من داخل الدجاجة.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,18 +168,54 @@
 </section>
 <section class="slide level1">
 
-<h2 id="ibat-ibang-panahon-1">Iba't ibang panahon</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Sandra McDougall<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
+<p>صاحت والدة الدودة &quot;استخدمي القوة الخاصة بك يا ابنتي!&quot;. حيث يستطيع الديدان إخراج رائحة كريهة وطعم سيئ. بدأت الدجاجة تشعر بالمرض.</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
+<p>تجشأت الدجاجة. ثم ابتلعت وبصقت. ثم عطست وسعلت. ثم سعلت. كان طعم الدودة مثيراً للاشمئزاز!</p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
+<p>استمرت الدجاجة تسعل حتى سعلت الدودة خارجاً من بطنها. زحفت الدودة و والدتها سريعا فوق شجرة للاختفاء.</p>
+<center>
+<strong>11</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
+<p>ومنذ ذلك الوقت، أصبح الدجاج والديدان الأعداء.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="الدجاجة-والدودة-1">الدجاجة والدودة</h2>
+<strong>Text:</strong> Winny Asara<br> <strong>Illustrations:</strong> Winny Asara<br> <strong>Translation:</strong> Abrar Wafa<br> <strong>Language:</strong> Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/weather-book'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/chicken-and-millipede'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
 </div></center>
 
 
