--- a/stories/tl/0004_si-kambing-si-aso-at-si-baka_slides.html
+++ b/stories/tl/0004_si-kambing-si-aso-at-si-baka_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>May sukli si Aso dahil hindi eksakto ang binayad niya</p>
+<p>May sukli si Aso dahil hindi eksakto ang binayad niya.</p>
 <center>
 <strong>3</strong>
 </center>
