--- a/stories/tl/0231_ibat-ibang-panahon.html
+++ b/stories/tl/0231_ibat-ibang-panahon.html
@@ -98,7 +98,7 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>Tagalog</div><div class="pag
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0231/09.jpg" /></p>
 
-<p>Pero ngayon kita ko ang bahaghari.</p>
+<p>Ngayon, nakikita ko na ang bahag-hari.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
